refactor: simplify stream operations and remove unused methods