@@ -3,7 +3,6 @@ package com.example.application;
 import com.example.domain.model.FizzBuzzValue;
 import com.example.domain.type.FizzBuzzType;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class FizzBuzzListCommand implements FizzBuzzCommand {
@@ -15,6 +14,6 @@ public class FizzBuzzListCommand implements FizzBuzzCommand {
 
   @Override
   public List<FizzBuzzValue> executeList(int number) {
-    return IntStream.rangeClosed(1, number).mapToObj(type::generate).collect(Collectors.toList());
+    return IntStream.rangeClosed(1, number).mapToObj(type::generate).toList();
   }
 }
